# musicvis3d

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Justfile  README.md  conanfile.txt  musicvis.cap  requirements.txt
.github/workflows/: build.yml  conan.yml
data/: bar.frag.glsl  bar.vert.glsl  cube.dae  cubemap.frag.glsl  cubemap.vert.glsl  post.frag.glsl  quad.frag.glsl  quad.vert.glsl
data/songs/Test_Signal/: audio.flac
include/cosc/: animation.hpp  camera.hpp  cubemap.hpp  framebuffer.hpp  intro.hpp  mesh.hpp  model.hpp  shader.hpp  song_data.hpp  texture.hpp  util.hpp  vertex.hpp
include/cosc/lib/: Simplex.h
include/glad/: gl.h
paper/: Justfile  ieeemodified.csl  major.bib  major.tex  major.typ
paper/img/: classdiagram.drawio  diagram.drawio  renderpipe.drawio
proto/: MusicVis.capnp
scripts/: cam.py  decoder.py  process.py  process_all.sh
src/: animation.cpp  camera.cpp  cubemap.cpp  framebuffer.cpp  gl.c  intro.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  song_data.cpp  util.cpp
src/lib/: dr_flac.c  stb_image.c
